<?php
/**
 * Created by IntelliJ IDEA.
 * Author: flashytime
 * Date: 2018/9/12 20:08
 */

namespace DesignPatterns\Structural\Bridge;

interface Formatter
{
    public function format($text);
}
